Css styles added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import "../styles/global.css";
+const pageTitle = "Home";
 ---
 
 <html lang="en">
@@ -8,13 +9,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-	<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
+    <h1>{pageTitle}</h1>
     <h1>This is my first Astro page</h1>
     <h2>And I like it!</h2>
   </body>
