--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "Home";
 ---
 
@@ -12,12 +14,15 @@ const pageTitle = "Home";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
+    <Header />
     <h1>{pageTitle}</h1>
     <h1>This is my first Astro page</h1>
     <h2>And I like it!</h2>
+    <Footer />
+	
+	<script>
+		import "../scripts/menu.js";
+	</script>
+
   </body>
 </html>
